tests/ui/proc-macro/raw-ident.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `S`
  --> $DIR/raw-ident.rs:15:5
   |
LL |     make_bad_struct!(S);
   |     ^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected one of 8 possible tokens
   |     in this macro invocation
   |
  ::: $DIR/auxiliary/raw-ident.rs:24:1
   |
LL | pub fn make_bad_struct(input: TokenStream) -> TokenStream {
   | --------------------------------------------------------- in this expansion of `make_bad_struct!`

error: aborting due to previous error

